--- a/index.css
+++ b/index.css
@@ -1,22 +1,23 @@
 ul#menu {
-    font-family: Verdana, sans-serif;
-    font-size: 17px;
-    margin: 0;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 23px;
+    margin: 2;
     padding: 0;
     list-style: none;
    
 }
 ul#menu li {
     background-color: #ffffff;
-    border-bottom: 5px solid #54BAE2;
+    border-bottom: 5px solid #001aff;
     display: block;
+
     width: 170px;
     height: 50px;
     margin: 2px;
     float: left;
 }
 ul#menu li a {
-    color: #000000;
+    color: #1538d3;
     display: block;
     font-weight: bold;
     line-height: 50px;
@@ -26,16 +27,16 @@ ul#menu li a {
     text-align: center;
 }
 ul#menu li.active, ul#menu li:hover {
-    background-color: #54BAE2;
+    background-color: #9ef300;
     border-bottom: 5px solid #ffffff;
 }
 
 
-body{background-image: url(https://www.lorenzozesi.it/wp-content/uploads/2015/10/sfondo-homepage.jpg);background-repeat:no-repeat ;background-size: 120%;background-position: center;}
+body{background-image: url(https://cdn.wallpapersafari.com/22/97/JtQOp9.jpg);background-repeat:no-repeat ;background-size: 100%;background-position: center;}
 
 
-#titolo{font-size: 60px;text-align: center;background-color: #2482a7b7;color: #ffffff;margin-left: 25%;margin-right: 25%;}
-#o {font-size: 30px;text-align: center;color: #ffffff;margin-left: 0%;margin-right: 25%;}
+#titolo{font-size: 60px;text-align: center;background-color: #0044ffb7;color: #ffffff;margin-left: 25%;margin-right: 25%;}
+#o {font-size: 30px;text-align: center;color: #000000;margin-left: 0%;margin-right: 15%; background-color: white;}
 #divimg{ display: flex;
     justify-content: center;
     align-items: center;}
@@ -43,7 +44,7 @@ body{background-image: url(https://www.lorenzozesi.it/wp-content/uploads/2015/10
     width: auto;}
 
 
-#cr {margin-right: 2%;
+#cr {margin-right: 4%;
     width: auto;}
 
 
