--- a/index.css
+++ b/index.css
@@ -1,9 +1,64 @@
+/* CONTATTI*/
+table{margin-left:auto;
+	margin-right:auto;}
+
+img{width:110;
+	height:110;
+	display:block;
+	margin-left:50;
+	margin-right:50;}
+	
+.img1{width:133;
+	height:135;
+	display:block;
+	margin-left:50;
+	margin-right:50;}	
+	
+.img2{width:120;
+	height:120;
+	display:block;
+	margin-left:50;
+	margin-right:50;}
+
+.img4{width:110;
+	height:110;
+	display:block;
+	margin-left:50;
+	margin-right:50;}
+	
+.img3{width:110;
+	height:110;}
+
+.img5{width:300;
+	height:80;}
+	
+.img6{width:210;
+	height:110;
+	display:block;
+	margin-left:50;
+	margin-right:50;}
+	
+.celle-unite{width:666.4;
+	height:100;}
+
+.testo{ color:rgb(8, 29, 114);
+		font-family:sans-serif;
+		font-size:23px;}
+
+/* END CONTATTI*/
+
+#opzioni {
+	justify-content: center;
+	display: flex;
+	padding: 0px 0px 10px 85px
+}
+
 ul#menu {
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 23px;
     margin: 2;
-    padding: 0;
     list-style: none;
+    margin-top: 50px
    
 }
 ul#menu li {
@@ -11,7 +66,7 @@ ul#menu li {
     border-bottom: 5px solid #03b7ff;; 
     display: block;
 
-    width: 170px;
+    width: 250px;
     height: 50px;
     margin: 2px;
     float: left;
@@ -34,18 +89,27 @@ ul#menu li.active, ul#menu li:hover {
 
 body{background-image: url(https://storage.orobie.it/media/filer_public/b5/54/b5549f8d-91db-441d-8f23-f5a7c734a55a/35992_02_627_lago-pusiano_e-isola-cipressijpg.jpg);background-repeat:no-repeat ;background-size: 100%;background-position: center;}
 
+/*FORMATTAZIONE TESTO*/
+#titolo{font-family:Palatino,URW Palladio L,serif; font-size: 66px; text-align: center;background-color: #00c3ffb7;color: #ffffff;margin-left: 25%;margin-right: 25%;}
 
-#titolo{font-size: 66px;text-align: center;background-color: #00c3ffb7;color: #ffffff;margin-left: 25%;margin-right: 25%;}
-#o {font-size: 30px;text-align: center;color: #ec3131;margin-left: 0%;margin-right: 15%; background-color: white;}
+h2 {font-family:Palatino,URW Palladio L,serif; font-size: 44px; text-align: center;background-color: 	rgb(175, 225, 175, 0.8);color: #ffffff;margin-left: 25%;margin-right: 25%;}
+
+#o {font-family: American Typewriter, serif;font-size: 24px;text-align: center;color: #ec3131;margin-left: 0%;margin-right: 10%; background-color: white;}
+
+#o2 {font-family: American Typewriter, serif;font-size: 24px;text-align: center;color: #ec3131;margin-left: 20%;margin-right: 20%; background-color: white;}
+
+#o3 {font-family: American Typewriter, serif;font-size: 24px;text-align: center;color: #ec3131;margin-left: 10%; background-color: white;}
 #divimg{ display: flex;
     justify-content: center;
     align-items: center;}
 #ele1 {margin-left: 25%;
-    width: auto;}
+    width: 400px;
+	height: 350px;}
 
 
 #cr {margin-right: 4%;
-    width: auto;}
+    width: 150px;
+	height:100px;}
 
 
 #cr2{display: flex;
@@ -70,7 +134,7 @@ body{background-image: url(https://storage.orobie.it/media/filer_public/b5/54/b5
 
 
 #cr3{align-items: center;display: flex;justify-content: center;}
-#cr4{}
+#cr4{} 
 body{
 	font-size:100%;
 	color:#333;
@@ -86,14 +150,8 @@ body{
 
 /*menu*/
 
-ul#menu {
-	margin:60px 0 0;
-	padding: 0;
-	list-style: none;
-	float:left;
-	width:
 
-}
+
 body{
 	font-size:100%;
 	color:#333;
@@ -108,183 +166,47 @@ body{
 	width: 960px;
 }
 
+#imginf {
+	width: 640px;
+	height: 480px;
+	display: flex;
+
+}
+
 /*menu*/
 
-ul#menu {
-	margin:60px 0 0;
-	padding: 0;
-	list-style: none;
-	float:left;
-	width: 960px;
-	font-size:80%;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	border-radius: 5px; 
-	background: rgb(255,175,75);
-	background: rgb(98,125,77);
-	background: -moz-linear-gradient(top,  rgba(98,125,77,1) 0%, rgba(31,59,8,1) 100%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(98,125,77,1)), color-stop(100%,rgba(31,59,8,1)));
-	background: -webkit-linear-gradient(top,  rgba(98,125,77,1) 0%,rgba(31,59,8,1) 100%);
-	background: -o-linear-gradient(top,  rgba(98,125,77,1) 0%,rgba(31,59,8,1) 100%);
-	background: -ms-linear-gradient(top,  rgba(98,125,77,1) 0%,rgba(31,59,8,1) 100%);
-	background: linear-gradient(top,  rgba(98,125,77,1) 0%,rgba(31,59,8,1) 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#627d4d', endColorstr='#1f3b08',GradientType=0 );
-	-webkit-box-shadow: 0px 0px 3px 0px #999;
-	-moz-box-shadow: 0px 0px 3px 0px #999;
-	box-shadow: 0px 0px 3px 0px #999; 
+#menu {
+  display: table;
 }
 
-ul#menu li {
-	margin:0;
-	padding:0;
-	float:left;
-	display: block;
-	border-right: 1px solid #1C2B10;
-	position: relative;
-	-webkit-transition: all 0.6s ease;
-	-moz-transition: all 0.6s ease;
-	-ms-transition: all 0.6s ease;
-	-o-transition: all 0.6s ease;
-	transition: all 0.6s ease;
+#menu li {
+  display: table-cell;
+  width: 400px;
+  flex-grow: 1;
+  margin: 0 10px;
+  position: relative;
+  text-align: center;
 }
 
-ul#menu li a {
-	float: left;
-	display:block;
-	padding:12px 30px;
-	color: #ffffff00;
-	text-transform: uppercase;
-	text-decoration:none;
-	-webkit-transition: all 0.6s ease;
-	-moz-transition: all 0.6s ease;
-	-ms-transition: all 0.6s ease;
-	-o-transition: all 0.6s ease;
-	transition: all 0.6s ease;
+#menu li a {
+  color: #000;
+  display: block;
+  padding: 10px;
 }
 
-ul#menu li a:hover {
-	color:#fff;
-	background: rgb(115,136,10);
-	background: -moz-linear-gradient(top,  rgba(115,136,10,1) 0%, rgba(115,136,10,1) 100%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba)), color-stop(100%,rgba(115,136,10,1)));
-	background: -webkit-linear-gradient(top,  rgba(115,136,10,1) 0%,rgb(10, 55, 255) 100%);
-	background: -o-linear-gradient(top,  rgba(115,136,10,1) 0%,rgba(115,136,10,1) 100%);
-	background: -ms-linear-gradient(top,  rgba(115,136,10,1) 0%,rgba(115,136,10,1) 100%);
-	background: linear-gradient(top,  rgba(115,136,10,1) 0%,rgba(115,136,10,1) 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#73880a', endColorstr='#73880a',GradientType=0 );
+#menu li a:before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #000;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 0.3s ease-in-out;
 }
 
-ul#menu li:first-child > a {
-	-moz-border-radius-topleft: 5px;
-	-moz-border-radius-topright: 0px;
-	-moz-border-radius-bottomright: 0px;
-	-moz-border-radius-bottomleft: 5px;
-	-webkit-border-radius: 5px 0px 0px 5px;
-	border-radius: 5px 0px 0px 5px;  
-}
-
-ul#menu ul li:first-child > a{
-	-moz-border-radius-topleft: 0;
-	-moz-border-radius-topright: 0;
-	-moz-border-radius-bottomright: 0;
-	-moz-border-radius-bottomleft: 0;
-	-webkit-border-radius: 0 0 0 0;
-	border-radius: 0 0 0 0;  
-}
-
-ul#menu ul li:first-child > a:after {
-	content: '';
-	position: absolute;
-	left: 40px;
-	top: -6px;
-	border-left: 6px solid transparent;
-	border-right: 6px solid transparent;
-	border-bottom: 6px solid #fff;
-}
-
-ul#menu ul ul li:first-child a:after {
-	left: -6px;
-	top: 50%;
-	margin-top: -6px;
-	border-left: 0;
-	border-bottom: 6px solid transparent;
-	border-top: 6px solid transparent;
-	border-right: 6px solid #fff;
-}
-
-ul#menu ul {
-	margin:2px 0 0;
-	padding:0;
-	display:inline-block;
-	list-style: none;
-	opacity: 0;
-	visibility: hidden;
-	position: absolute;
-	top: 38px;
-	left: 0;
-	z-index:9999;
-	background: rgb(115,136,10);
-	background: -moz-linear-gradient(top,  rgba(115,136,10,1) 0%, rgba(115,136,10,1) 100%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(115,136,10,1)), color-stop(100%,rgba(115,136,10,1)));
-	background: -webkit-linear-gradient(top,  rgba(115,136,10,1) 0%,rgba(115,136,10,1) 100%);
-	background: -o-linear-gradient(top,  rgba(115,136,10,1) 0%,rgba(115,136,10,1) 100%);
-	background: -ms-linear-gradient(top,  rgba(115,136,10,1) 0%,rgba(115,136,10,1) 100%);
-	background: linear-gradient(top,  rgba(115,136,10,1) 0%,rgba(115,136,10,1) 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#73880a', endColorstr='#73880a',GradientType=0 );
-	-webkit-box-shadow: 0px 2px 3px 0px #999;
-	-moz-box-shadow: 0px 2px 3px 0px #999;
-	box-shadow: 0px 2px 3px 0px #999; 
-	-webkit-transition: all 0.6s ease;
-	-moz-transition: all 0.6s ease;
-	-ms-transition: all 0.6s ease;
-	-o-transition: all 0.6s ease;
-	transition: all 0.6s ease;
-}
-
-ul#menu ul li > ul{
-	-webkit-box-shadow: 2px 2px 3px 0px #999;
-	-moz-box-shadow: 2px 2px 3px 0px #999;
-	box-shadow: 2px 2px 3px 0px #999; 
-}
-
-ul#menu li:hover > ul {
-	opacity: 1;
-	visibility: visible;
-}
-
-ul#menu ul li {
-	float: left;
-	display: block;
-	border:none;
-}
-
-ul#menu ul a {
-	padding:10px;
-	width: 130px;
-	display:block;
-	float: left;
-	text-transform: none;
-	border-bottom:1px solid #1C2B10;
-}
-
-ul#menu ul li:last-child > a {
-	border-bottom:none;
-}
-
-ul#menu ul ul {
-	top: 0;
-	left: 150px;
-	margin: 0;
-}
-
-ul#menu ul a:hover{
-	background: rgb(75, 204, 255);
-	background: rgb(21, 253, 253);
-	background: -moz-linear-gradient(top,  rgb(9, 245, 225) 0%, rgb(96, 200, 245) 100%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgb(17, 161, 245)), color-stop(100%,rgb(10, 137, 175)));
-	background: -webkit-linear-gradient(top,  rgb(0, 165, 206) 0%,rgb(21, 130, 202) 100%);
-	background: -o-linear-gradient(top,  rgb(190, 230, 255) 0%,rgb(41, 95, 211) 100%);
-	background: -ms-linear-gradient(top,  rgb(0, 160, 189) 0%,rgb(18, 129, 173) 100%);
-	background: linear-gradient(top,  rgb(15, 206, 253) 0%,rgb(56, 208, 228) 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#627d4d', endColorstr='#1f3b08',GradientType=0 );
+#menu li a:hover:before {
+  transform: scaleX(1);
 }
