--- a/index.css
+++ b/index.css
@@ -13,7 +13,9 @@ img{width:110;
 	display:block;
 	margin-left:50;
 	margin-right:50;}	
-	
+	#contributi {
+    margin: 30% 0% 0% 4%;
+  }
 .img2{width:120;
 	height:120;
 	display:block;
